# meguchan-lte

./: .env.dev  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/plugins/meguchan-emojimix/: __init__.py  config.py
src/plugins/meguchan-mcs/: __init__.py  config.py
src/plugins/meguchan-picsearch/: __init__.py  config.py
src/plugins/meguchan-pixiv/: __init__.py  config.py
src/plugins/nonebot_plugin_emojimix/: __init__.py  config.py  data_source.py
